# october_21st_birthday

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml  pyrightconfig.json
apps/api/app/: __init__.py  main.py
apps/api/app/core/: deps.py  security.py  settings.py
apps/api/app/db/: indexes.py  mongo.py
apps/api/app/routers/: __init__.py  auth.py  calendar.py  projects.py  tasks.py
apps/api/app/schemas/: auth.py  common.py  domain.py
apps/api/app/services/: exp_award.py  leveling.py
apps/api/october_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: benchmark_search.py  test_leveling.py  test_search_baseline.py
apps/web/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
apps/web/.angular/cache/18.2.21/october-web/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
apps/web/src/: index.html  main.ts  styles.css
apps/web/src/app/: app.component.ts  app.routes.ts
apps/web/src/app/auth/: auth-page.component.ts
apps/web/src/app/calendar/: calendar-page.component.ts
apps/web/src/app/core/: state.service.ts
apps/web/src/app/dashboard/: dashboard-page.component.ts
apps/web/src/app/project/: project-page.component.ts
docs/: database_design_v1.md  newLeaf_design_docs.html  project_design_v1.md
docs/specs/: phase_0_foundation.md  phase_1_auth.md  phase_2_leveling.md  phase_3_dashboard.md  phase_4_tasks.md  phase_5_calendar.md  phase_6_hardening.md
