[project]
name = "october-api"
version = "0.1.0"
description = "FastAPI backend for October prosthetics platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.3.4",
  "pymongo>=4.8.0",
  "motor>=3.5.1",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "ruff>=0.6.3",
  "pyright>=1.1.379",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
